--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <body>
 <h1>Test Site</h1>
 <p>Trying GitHub Pages.</p>
-<p>Change file.</p>
+<p><b>Microsoft Dev News July 22, 2020</b><br><a href="Microsoft Dev News - Try the new Git experience in Visual Studio 2019.htm">Microsoft Dev News - Try the new Git experience in Visual Studio 2019</a></p>
+<p></p>
 </body>
 </html>
