--- a/index.html
+++ b/index.html
@@ -3,7 +3,12 @@
 <body>
 <h1>Test Site</h1>
 <p>Trying GitHub Pages.</p>
-<p><b>Microsoft Dev News July 22, 2020</b><br><a href="Microsoft Dev News - Try the new Git experience in Visual Studio 2019.htm">Microsoft Dev News - Try the new Git experience in Visual Studio 2019</a></p>
+<p><b>Microsoft Dev News July 22, 2020</b><br>
+<a href="Microsoft Dev News - Try the new Git experience in Visual Studio 2019.htm">Microsoft Dev News - Try the new Git experience in Visual Studio 2019</a></p>
+
+<p><b>Microsoft Dev News July 8, 2020</b><br>
+<a href="Microsoft Dev News - Get the Visual Studio Basic Essentials extension pack.htm">Microsoft Dev News - Get the Visual Studio Basic Essentials extension pack</a></p>
+
 <p></p>
 </body>
 </html>
